--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,11 @@
     -->
     <link rel="stylesheet" type="text/css"
       href="%PUBLIC_URL%/style.css" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <title>Molly Fuhrman Professional Website</title>
   </head>
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
+  <title>molfuh.dev</title>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
